changed api method naming
